--- a/Reader_/Reader_ViewController.xib
+++ b/Reader_/Reader_ViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,16 +11,17 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Reader_ViewController" customModule="MeBook" customModuleProvider="target">
             <connections>
+                <outlet property="activity" destination="Trf-6i-Moa" id="p1G-Pp-GXp"/>
                 <outlet property="chapter" destination="E5Q-k8-K84" id="QO3-Nn-OK8"/>
+                <outlet property="collectionView" destination="fIN-CT-aIc" id="EIz-hd-j1c"/>
                 <outlet property="cover" destination="8JW-Su-IJf" id="tLy-Ss-WCF"/>
                 <outlet property="downLoad" destination="BXk-iU-bGX" id="fDj-bo-OJ4"/>
                 <outlet property="failLabel" destination="5Ao-PB-nqt" id="TIc-Jg-vdt"/>
                 <outlet property="pageNumber" destination="ySy-S1-1mM" id="PTQ-cw-mhL"/>
                 <outlet property="pdfView" destination="1Kd-We-2c1" id="foz-n6-PAf"/>
+                <outlet property="reader" destination="IUD-cD-kSZ" id="AjA-UF-ZNV"/>
                 <outlet property="restart" destination="I6S-Zs-M4F" id="Xw6-UP-G8G"/>
                 <outlet property="showFull" destination="LpR-aG-b8R" id="Jhr-IS-PhC"/>
-                <outlet property="titleLabel" destination="YMH-aa-Yna" id="ddm-eN-Ycl"/>
-                <outlet property="topHeight" destination="CCy-SP-z56" id="FWl-FR-nDJ"/>
                 <outlet property="topView" destination="tH1-YX-68o" id="iX1-wM-pMW"/>
                 <outlet property="view" destination="Xit-aY-mf9" id="cuU-c5-B1b"/>
             </connections>
@@ -44,15 +45,6 @@
                                 <action selector="didPressContent" destination="-1" eventType="touchUpInside" id="5QJ-Iu-cqQ"/>
                             </connections>
                         </button>
-                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YMH-aa-Yna">
-                            <rect key="frame" x="60" y="16" width="289" height="33"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="33" id="aq4-G7-qoK"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="41J-L5-vvB">
                             <rect key="frame" x="371" y="14.5" width="35" height="35"/>
                             <constraints>
@@ -64,16 +56,37 @@
                                 <action selector="didPressBack" destination="-1" eventType="touchUpInside" id="2jr-GS-uqB"/>
                             </connections>
                         </button>
+                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IUD-cD-kSZ">
+                            <rect key="frame" x="330" y="15.5" width="33" height="33"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="33" id="g6c-ny-FWr"/>
+                                <constraint firstAttribute="height" constant="33" id="pFA-Od-9fz"/>
+                            </constraints>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" image="book_default"/>
+                            <connections>
+                                <action selector="didPressReader" destination="-1" eventType="touchUpInside" id="Y9B-uB-kbt"/>
+                            </connections>
+                        </button>
+                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Trf-6i-Moa">
+                            <rect key="frame" x="336" y="22" width="20" height="20"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="20" id="vL2-tw-sNJ"/>
+                                <constraint firstAttribute="height" constant="20" id="yYf-av-8sn"/>
+                            </constraints>
+                            <color key="color" red="0.92549019610000005" green="0.92941176469999998" blue="0.90588235289999997" alpha="1" colorSpace="calibratedRGB"/>
+                        </activityIndicatorView>
                     </subviews>
                     <color key="backgroundColor" red="0.11764705882352941" green="0.5725490196078431" blue="0.5490196078431373" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="64" id="CCy-SP-z56"/>
-                        <constraint firstItem="YMH-aa-Yna" firstAttribute="top" secondItem="tH1-YX-68o" secondAttribute="top" constant="16" id="IJS-25-24j"/>
+                        <constraint firstItem="41J-L5-vvB" firstAttribute="leading" secondItem="Trf-6i-Moa" secondAttribute="trailing" constant="15" id="I96-ju-jka"/>
                         <constraint firstItem="41J-L5-vvB" firstAttribute="centerY" secondItem="tH1-YX-68o" secondAttribute="centerY" id="JMa-Md-GbT"/>
+                        <constraint firstItem="Trf-6i-Moa" firstAttribute="centerY" secondItem="tH1-YX-68o" secondAttribute="centerY" id="NYm-E2-isC"/>
                         <constraint firstItem="E5Q-k8-K84" firstAttribute="top" secondItem="tH1-YX-68o" secondAttribute="top" constant="10" id="Nu6-3B-pfq"/>
-                        <constraint firstItem="YMH-aa-Yna" firstAttribute="leading" secondItem="E5Q-k8-K84" secondAttribute="trailing" constant="8" id="Y58-it-57X"/>
-                        <constraint firstAttribute="trailing" secondItem="YMH-aa-Yna" secondAttribute="trailing" constant="65" id="dG3-cx-b7d"/>
+                        <constraint firstItem="41J-L5-vvB" firstAttribute="leading" secondItem="IUD-cD-kSZ" secondAttribute="trailing" constant="8" symbolic="YES" id="YNX-0i-Wsn"/>
                         <constraint firstItem="E5Q-k8-K84" firstAttribute="leading" secondItem="tH1-YX-68o" secondAttribute="leading" constant="8" id="l5L-J3-Cvh"/>
+                        <constraint firstItem="IUD-cD-kSZ" firstAttribute="centerY" secondItem="tH1-YX-68o" secondAttribute="centerY" id="rld-hp-WJw"/>
                         <constraint firstAttribute="trailing" secondItem="41J-L5-vvB" secondAttribute="trailing" constant="8" id="xvd-Ni-FWm"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
@@ -133,6 +146,20 @@
                     <rect key="frame" x="0.0" y="812" width="414" height="50"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </view>
+                <collectionView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="fIN-CT-aIc">
+                    <rect key="frame" x="0.0" y="108" width="414" height="704"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fsp-vh-ElK">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="RSU-z9-yMA"/>
+                        <outlet property="delegate" destination="-1" id="83w-d3-XE0"/>
+                    </connections>
+                </collectionView>
                 <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ySy-S1-1mM" customClass="MarginLabel" customModule="MeBook" customModuleProvider="target">
                     <rect key="frame" x="186" y="819" width="42" height="35"/>
                     <color key="backgroundColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
@@ -183,16 +210,20 @@
                 <constraint firstItem="tH1-YX-68o" firstAttribute="trailing" secondItem="eug-p7-zIe" secondAttribute="trailing" id="HoS-V6-Hez"/>
                 <constraint firstItem="oQl-Jm-Jd2" firstAttribute="trailing" secondItem="eug-p7-zIe" secondAttribute="trailing" id="Jl0-ON-LfE"/>
                 <constraint firstItem="BXk-iU-bGX" firstAttribute="centerY" secondItem="Xit-aY-mf9" secondAttribute="centerY" id="KjT-dn-krh"/>
+                <constraint firstItem="fIN-CT-aIc" firstAttribute="top" secondItem="tH1-YX-68o" secondAttribute="bottom" id="LMp-dm-rEH"/>
                 <constraint firstItem="Z9B-nU-mit" firstAttribute="top" secondItem="1Kd-We-2c1" secondAttribute="bottom" id="PJ8-Ig-kpn"/>
                 <constraint firstItem="tH1-YX-68o" firstAttribute="leading" secondItem="eug-p7-zIe" secondAttribute="leading" id="PJl-ip-Glv"/>
                 <constraint firstItem="ySy-S1-1mM" firstAttribute="centerX" secondItem="Xit-aY-mf9" secondAttribute="centerX" id="R6Z-fL-ZeW"/>
+                <constraint firstItem="fIN-CT-aIc" firstAttribute="leading" secondItem="eug-p7-zIe" secondAttribute="leading" id="RCQ-Rn-dh3"/>
                 <constraint firstItem="5Ao-PB-nqt" firstAttribute="top" secondItem="I6S-Zs-M4F" secondAttribute="bottom" constant="9" id="VSc-2P-UZp"/>
                 <constraint firstItem="1Kd-We-2c1" firstAttribute="leading" secondItem="eug-p7-zIe" secondAttribute="leading" id="Yfl-Z0-G6s"/>
+                <constraint firstItem="Z9B-nU-mit" firstAttribute="top" secondItem="fIN-CT-aIc" secondAttribute="bottom" id="ZIv-BV-8m1"/>
                 <constraint firstItem="8JW-Su-IJf" firstAttribute="bottom" secondItem="eug-p7-zIe" secondAttribute="bottom" id="bix-1j-XfK"/>
                 <constraint firstItem="BXk-iU-bGX" firstAttribute="centerX" secondItem="Xit-aY-mf9" secondAttribute="centerX" id="cKD-gW-kkB"/>
                 <constraint firstItem="Z9B-nU-mit" firstAttribute="bottom" secondItem="eug-p7-zIe" secondAttribute="bottom" id="fJT-3v-8BI"/>
                 <constraint firstItem="Hyh-zg-4NE" firstAttribute="bottom" secondItem="eug-p7-zIe" secondAttribute="bottom" id="fOm-n6-sUK"/>
                 <constraint firstItem="Hyh-zg-4NE" firstAttribute="leading" secondItem="eug-p7-zIe" secondAttribute="leading" id="gpJ-ut-NTn"/>
+                <constraint firstItem="fIN-CT-aIc" firstAttribute="trailing" secondItem="eug-p7-zIe" secondAttribute="trailing" id="ivg-Mq-ArT"/>
                 <constraint firstItem="8JW-Su-IJf" firstAttribute="top" secondItem="tH1-YX-68o" secondAttribute="bottom" id="kmv-l3-8uE"/>
                 <constraint firstItem="tH1-YX-68o" firstAttribute="top" secondItem="eug-p7-zIe" secondAttribute="top" id="meu-za-thE"/>
                 <constraint firstItem="Z9B-nU-mit" firstAttribute="trailing" secondItem="eug-p7-zIe" secondAttribute="trailing" id="sJJ-Co-jiN"/>
@@ -213,6 +244,7 @@
         <designable name="ySy-S1-1mM"/>
     </designables>
     <resources>
+        <image name="book_default" width="33" height="33"/>
         <image name="ico_menu" width="31.5" height="31.5"/>
         <image name="icon_close" width="33" height="33"/>
         <image name="reload" width="42.5" height="42.5"/>
