--- a/Reader_/Reader_ViewController.xib
+++ b/Reader_/Reader_ViewController.xib
@@ -17,11 +17,15 @@
                 <outlet property="cover" destination="8JW-Su-IJf" id="tLy-Ss-WCF"/>
                 <outlet property="downLoad" destination="BXk-iU-bGX" id="fDj-bo-OJ4"/>
                 <outlet property="failLabel" destination="5Ao-PB-nqt" id="TIc-Jg-vdt"/>
+                <outlet property="gesture" destination="LGz-In-ncm" id="jfd-8R-0Y0"/>
+                <outlet property="imageView" destination="Inh-qV-D8s" id="hbx-oe-nnz"/>
                 <outlet property="pageNumber" destination="ySy-S1-1mM" id="PTQ-cw-mhL"/>
                 <outlet property="pdfView" destination="1Kd-We-2c1" id="foz-n6-PAf"/>
                 <outlet property="reader" destination="IUD-cD-kSZ" id="AjA-UF-ZNV"/>
                 <outlet property="restart" destination="I6S-Zs-M4F" id="Xw6-UP-G8G"/>
                 <outlet property="showFull" destination="LpR-aG-b8R" id="Jhr-IS-PhC"/>
+                <outlet property="textView" destination="4eX-c1-1C3" id="4hE-Ho-MMV"/>
+                <outlet property="titleLabel" destination="01M-kJ-3vo" id="J0m-eY-1zI"/>
                 <outlet property="topView" destination="tH1-YX-68o" id="iX1-wM-pMW"/>
                 <outlet property="view" destination="Xit-aY-mf9" id="cuU-c5-B1b"/>
             </connections>
@@ -56,7 +60,7 @@
                                 <action selector="didPressBack" destination="-1" eventType="touchUpInside" id="2jr-GS-uqB"/>
                             </connections>
                         </button>
-                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IUD-cD-kSZ">
+                        <button hidden="YES" opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IUD-cD-kSZ">
                             <rect key="frame" x="330" y="15.5" width="33" height="33"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="33" id="g6c-ny-FWr"/>
@@ -68,7 +72,7 @@
                                 <action selector="didPressReader" destination="-1" eventType="touchUpInside" id="Y9B-uB-kbt"/>
                             </connections>
                         </button>
-                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Trf-6i-Moa">
+                        <activityIndicatorView opaque="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Trf-6i-Moa">
                             <rect key="frame" x="336" y="22" width="20" height="20"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="20" id="vL2-tw-sNJ"/>
@@ -76,17 +80,29 @@
                             </constraints>
                             <color key="color" red="0.92549019610000005" green="0.92941176469999998" blue="0.90588235289999997" alpha="1" colorSpace="calibratedRGB"/>
                         </activityIndicatorView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="01M-kJ-3vo" customClass="MarqueeLabel" customModule="MarqueeLabel">
+                            <rect key="frame" x="60" y="22" width="303" height="21"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="21" id="vFe-eJ-uvW"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                            <color key="textColor" red="0.92549019610000005" green="0.92941176469999998" blue="0.90588235289999997" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" red="0.11764705882352941" green="0.5725490196078431" blue="0.5490196078431373" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="64" id="CCy-SP-z56"/>
+                        <constraint firstItem="01M-kJ-3vo" firstAttribute="top" secondItem="tH1-YX-68o" secondAttribute="top" constant="22" id="FWm-oQ-31W"/>
                         <constraint firstItem="41J-L5-vvB" firstAttribute="leading" secondItem="Trf-6i-Moa" secondAttribute="trailing" constant="15" id="I96-ju-jka"/>
                         <constraint firstItem="41J-L5-vvB" firstAttribute="centerY" secondItem="tH1-YX-68o" secondAttribute="centerY" id="JMa-Md-GbT"/>
                         <constraint firstItem="Trf-6i-Moa" firstAttribute="centerY" secondItem="tH1-YX-68o" secondAttribute="centerY" id="NYm-E2-isC"/>
                         <constraint firstItem="E5Q-k8-K84" firstAttribute="top" secondItem="tH1-YX-68o" secondAttribute="top" constant="10" id="Nu6-3B-pfq"/>
                         <constraint firstItem="41J-L5-vvB" firstAttribute="leading" secondItem="IUD-cD-kSZ" secondAttribute="trailing" constant="8" symbolic="YES" id="YNX-0i-Wsn"/>
+                        <constraint firstItem="41J-L5-vvB" firstAttribute="leading" secondItem="01M-kJ-3vo" secondAttribute="trailing" constant="8" symbolic="YES" id="fax-I0-t7z"/>
                         <constraint firstItem="E5Q-k8-K84" firstAttribute="leading" secondItem="tH1-YX-68o" secondAttribute="leading" constant="8" id="l5L-J3-Cvh"/>
                         <constraint firstItem="IUD-cD-kSZ" firstAttribute="centerY" secondItem="tH1-YX-68o" secondAttribute="centerY" id="rld-hp-WJw"/>
+                        <constraint firstItem="01M-kJ-3vo" firstAttribute="leading" secondItem="E5Q-k8-K84" secondAttribute="trailing" constant="8" symbolic="YES" id="xgQ-ws-Iii"/>
                         <constraint firstAttribute="trailing" secondItem="41J-L5-vvB" secondAttribute="trailing" constant="8" id="xvd-Ni-FWm"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
@@ -102,10 +118,10 @@
                 </view>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8JW-Su-IJf">
                     <rect key="frame" x="0.0" y="108" width="414" height="754"/>
+                    <color key="backgroundColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                 </imageView>
                 <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oQl-Jm-Jd2">
                     <rect key="frame" x="0.0" y="108" width="414" height="754"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
                 <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progressViewStyle="bar" translatesAutoresizingMaskIntoConstraints="NO" id="BXk-iU-bGX" customClass="DownLoad">
                     <rect key="frame" x="107" y="447.5" width="200" height="2.5"/>
@@ -116,9 +132,35 @@
                     <color key="progressTintColor" red="0.0" green="0.60784313729999995" blue="0.70588235290000001" alpha="1" colorSpace="calibratedRGB"/>
                     <color key="trackTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </progressView>
-                <view hidden="YES" clipsSubviews="YES" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="1Kd-We-2c1" customClass="PDFView">
+                <view hidden="YES" clipsSubviews="YES" alpha="0.0" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="1Kd-We-2c1" customClass="PDFView">
                     <rect key="frame" x="0.0" y="108" width="414" height="704"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </view>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LGz-In-ncm">
+                    <rect key="frame" x="0.0" y="108" width="414" height="704"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Inh-qV-D8s">
+                            <rect key="frame" x="8" y="8" width="398" height="688"/>
+                        </imageView>
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="justified" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4eX-c1-1C3">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="704"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <color key="textColor" systemColor="labelColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                        </textView>
+                    </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="Inh-qV-D8s" firstAttribute="top" secondItem="LGz-In-ncm" secondAttribute="top" constant="8" id="39s-yH-gnk"/>
+                        <constraint firstAttribute="trailing" secondItem="4eX-c1-1C3" secondAttribute="trailing" id="5IB-ew-mxx"/>
+                        <constraint firstAttribute="bottom" secondItem="4eX-c1-1C3" secondAttribute="bottom" id="5OR-ie-LUc"/>
+                        <constraint firstItem="4eX-c1-1C3" firstAttribute="top" secondItem="LGz-In-ncm" secondAttribute="top" id="7B8-0C-LX4"/>
+                        <constraint firstItem="Inh-qV-D8s" firstAttribute="leading" secondItem="LGz-In-ncm" secondAttribute="leading" constant="8" id="Xvc-yF-mm5"/>
+                        <constraint firstAttribute="bottom" secondItem="Inh-qV-D8s" secondAttribute="bottom" constant="8" id="f13-Xa-hsC"/>
+                        <constraint firstItem="4eX-c1-1C3" firstAttribute="leading" secondItem="LGz-In-ncm" secondAttribute="leading" id="mg3-a6-DGi"/>
+                        <constraint firstAttribute="trailing" secondItem="Inh-qV-D8s" secondAttribute="trailing" constant="8" id="qMe-48-UzU"/>
+                    </constraints>
                 </view>
                 <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LpR-aG-b8R">
                     <rect key="frame" x="371" y="60" width="35" height="35"/>
@@ -144,7 +186,7 @@
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z9B-nU-mit">
                     <rect key="frame" x="0.0" y="812" width="414" height="50"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
                 <collectionView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="fIN-CT-aIc">
                     <rect key="frame" x="0.0" y="108" width="414" height="704"/>
@@ -195,10 +237,11 @@
                 </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="eug-p7-zIe"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="8JW-Su-IJf" firstAttribute="trailing" secondItem="eug-p7-zIe" secondAttribute="trailing" id="0EJ-ck-YTh"/>
                 <constraint firstItem="1Kd-We-2c1" firstAttribute="bottom" secondItem="eug-p7-zIe" secondAttribute="bottom" constant="-50" id="1nb-Op-T4S"/>
+                <constraint firstItem="LGz-In-ncm" firstAttribute="top" secondItem="tH1-YX-68o" secondAttribute="bottom" id="2TP-Xg-Wx1"/>
                 <constraint firstItem="5Ao-PB-nqt" firstAttribute="centerX" secondItem="Xit-aY-mf9" secondAttribute="centerX" id="4sk-DC-cwU"/>
                 <constraint firstItem="1Kd-We-2c1" firstAttribute="top" secondItem="tH1-YX-68o" secondAttribute="bottom" id="8Cd-RI-6eL"/>
                 <constraint firstItem="8JW-Su-IJf" firstAttribute="leading" secondItem="eug-p7-zIe" secondAttribute="leading" id="8KO-32-oU4"/>
@@ -208,6 +251,7 @@
                 <constraint firstItem="I6S-Zs-M4F" firstAttribute="centerY" secondItem="Xit-aY-mf9" secondAttribute="centerY" id="ERQ-J3-5ol"/>
                 <constraint firstItem="I6S-Zs-M4F" firstAttribute="centerX" secondItem="Xit-aY-mf9" secondAttribute="centerX" id="EtP-gb-fU9"/>
                 <constraint firstItem="tH1-YX-68o" firstAttribute="trailing" secondItem="eug-p7-zIe" secondAttribute="trailing" id="HoS-V6-Hez"/>
+                <constraint firstItem="LGz-In-ncm" firstAttribute="leading" secondItem="eug-p7-zIe" secondAttribute="leading" id="Irn-fk-ckU"/>
                 <constraint firstItem="oQl-Jm-Jd2" firstAttribute="trailing" secondItem="eug-p7-zIe" secondAttribute="trailing" id="Jl0-ON-LfE"/>
                 <constraint firstItem="BXk-iU-bGX" firstAttribute="centerY" secondItem="Xit-aY-mf9" secondAttribute="centerY" id="KjT-dn-krh"/>
                 <constraint firstItem="fIN-CT-aIc" firstAttribute="top" secondItem="tH1-YX-68o" secondAttribute="bottom" id="LMp-dm-rEH"/>
@@ -218,6 +262,8 @@
                 <constraint firstItem="5Ao-PB-nqt" firstAttribute="top" secondItem="I6S-Zs-M4F" secondAttribute="bottom" constant="9" id="VSc-2P-UZp"/>
                 <constraint firstItem="1Kd-We-2c1" firstAttribute="leading" secondItem="eug-p7-zIe" secondAttribute="leading" id="Yfl-Z0-G6s"/>
                 <constraint firstItem="Z9B-nU-mit" firstAttribute="top" secondItem="fIN-CT-aIc" secondAttribute="bottom" id="ZIv-BV-8m1"/>
+                <constraint firstItem="Z9B-nU-mit" firstAttribute="top" secondItem="LGz-In-ncm" secondAttribute="bottom" id="bCB-CD-0Hb"/>
+                <constraint firstItem="LGz-In-ncm" firstAttribute="trailing" secondItem="eug-p7-zIe" secondAttribute="trailing" id="bDO-JL-XFO"/>
                 <constraint firstItem="8JW-Su-IJf" firstAttribute="bottom" secondItem="eug-p7-zIe" secondAttribute="bottom" id="bix-1j-XfK"/>
                 <constraint firstItem="BXk-iU-bGX" firstAttribute="centerX" secondItem="Xit-aY-mf9" secondAttribute="centerX" id="cKD-gW-kkB"/>
                 <constraint firstItem="Z9B-nU-mit" firstAttribute="bottom" secondItem="eug-p7-zIe" secondAttribute="bottom" id="fJT-3v-8BI"/>
@@ -248,6 +294,9 @@
         <image name="ico_menu" width="31.5" height="31.5"/>
         <image name="icon_close" width="33" height="33"/>
         <image name="reload" width="42.5" height="42.5"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
